# fuxi

./: .gitignore  .gitreview  .testr.conf  .tox.ini.swp  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  Third Party Open Source Software Notice.docx  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.testrepository/: 0  times.dbm
devstack/: local.conf.sample  plugin.sh  settings
doc/source/: conf.py  fullstack-test.rst  index.rst  installation.rst  reno.rst  usage.rst
doc/source/devref/: cinder_provider.rst  index.rst  manila_provider.rst
etc/: fuxi.conf  fuxi.json  fuxi.spec  rootwrap.conf
etc/oslo-config-generator/: fuxi-config-generator.conf
etc/rootwrap.d/: fuxi.filters
fuxi/: __init__.py  app.wsgi  blockdevice.py  controllers.py  exceptions.py  i18n.py  opts.py  server.py  state_monitor.py  utils.py  version.py  wsgi.py
fuxi/common/: blockdevice.py  config.py  constants.py  consts.py  mount.py  state_monitor.py
fuxi/connector/: connector.py  osbrickconnector.py
fuxi/tests/: fake_client.py  fake_object.py  fake_volume.py  test_fuxi.py
fuxi/volumeprovider/: cinder.py  cinderprovider.py  manila.py  provider.py
releasenotes/notes/: bp-devstack-plugin-254fb68fdeb0fad2.yaml  bp-enable-fuxi-to-use-existed-cinder-volume-bcf8da55ab5585f9.yaml  bp-enable-fuxi-to-use-manila-share-b7038c879400a8e3.yaml  bp-fullstack-testing-9cb180a31e083374.yaml  bp-fuxi-cluster-cf26cc16e129af03.yaml  cinder-volume-for-docker-69e484932e56098c.yaml
releasenotes/source/: conf.py  index.rst
tools/: generate_config_file_samples.sh
(+24 files in other folders)
