[metadata]
name = fuxi
summary = Enable Docker container to use Cinder volume and Manila share
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[entry_points]
oslo.config.opts =
    fuxi = fuxi.opts:list_fuxi_opts

console_scripts =
    fuxi-server = fuxi.server:start
    fuxi-rootwrap = oslo_rootwrap.cmd:main

[files]
packages =
    fuxi
data_files =
    /etc/fuxi =
        etc/fuxi.conf
        etc/rootwrap.conf
    /etc/fuxi/rootwrap.d =
        etc/rootwrap.d/volume.filters
    /usr/lib/docker/plugins/fuxi =
    	etc/fuxi.json

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = fuxi/locale
domain = fuxi

[update_catalog]
domain = fuxi
output_dir = fuxi/locale
input_file = fuxi/locale/fuxi.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = fuxi/locale/fuxi.pot
